--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 #just in case we build a new exe
 Interface Source Code/dist
 Stream Tool/Resources/Assets/Pokemon/**
+Stream Tool/Resources/Texts/GUI Settings.json
+Stream Tool/Resources/Texts/GUI State.json
