Fixes crashes when sending localized Pokémon + F6 to randomize the team.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 #just in case we build a new exe
 Interface Source Code/dist
-Stream Tool/Resources/Assets/Pokemon/sprites/*
+Stream Tool/Resources/Assets/Pokemon/*
+!Stream Tool/Resources/Assets/Pokemon/.gitkeep
 Stream Tool/Resources/Texts/GUI Settings.json
 Stream Tool/Resources/Texts/GUI State.json
