Include sprite offsets in repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #just in case we build a new exe
 Interface Source Code/dist
-Stream Tool/Resources/Assets/Pokemon/*
-!Stream Tool/Resources/Assets/Pokemon/.gitkeep
+
+Stream Tool/Resources/Assets/Pokemon/sprites/*
+!Stream Tool/Resources/Assets/Pokemon/sprites/offsets.json
 Stream Tool/Resources/Texts/GUI Settings.json
 Stream Tool/Resources/Texts/GUI State.json
