Download icons spritesheet from assets repo

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ Interface Source Code/dist
 Stream Tool/Poke Stream Tool.exe
 Stream Tool/Poke Stream Tool.AppImage
 
+Stream Tool/Resources/Assets/Items/itemicons-sheet.png
 Stream Tool/Resources/Assets/Pokemon/sprites/*
 !Stream Tool/Resources/Assets/Pokemon/sprites/.gitkeep
 Stream Tool/Resources/Texts/GUI Settings.json
