--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Stream Tool/Resources/Assets/Pokemon/*
 !Stream Tool/Resources/Assets/Pokemon/sprites/.gitkeep
 Stream Tool/Resources/Texts/GUI Settings.json
 Stream Tool/Resources/Texts/GUI State.json
+Stream Tool/Resources/Scripts/GUI/External Libraries/pkmn/*
+!Stream Tool/Resources/Scripts/GUI/External Libraries/pkmn/.gitkeep
